                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-06-2006 fixed: [ 1505303 ] global subs off, issue when enabling vobsubs.
 - 13-06-2006 fixed: vobsubs stored as .idx + .rar should now work.
 - 12-06-2006 added: [ 1504525 ] <onclick> tags fillable using SkinSetting strings, thanks to Nuka1195.
 - 12-06-2006 fixed: Playlists containing a single stream or file are now left alone.
 - 12-06-2006 added: <back>BackSpace</back> to keymap.xml for numeric input dialog to allow backpace with remote.
 - 12-06-2006 fixed: problems with programdatabase upgrade code.
 - 12-06-2006 changed: <hidelabels> is now part of the thumbnailpanel control in the skin.
 - 12-06-2006 fixed: Label wrapping of the last word before a carriage return.
 - 12-06-2006 fixed: .strm files failed to play.
 - 11-06-2006 changed: mplayer now uses xbmc ftp filesystem. seeking is disabled for now due to lockups in curl. (works when using dvdplayer or mplayer without cache)
 - 11-06-2006 added: better subtitle charset detection. mplayer now tries to detect any multicharacter charsets, then fallbacks to user specified
 - 11-06-2006 added: builtin command, xbmc.KaiConnection.     Change kai connection status (connect/disconnect).
 - 11-06-2006 added: System.kaienabled conditional visibility tag.
 - 11-06-2006 added: System.dvdready and System.trayopen conditional visibility tag.
 - 11-06-2006 fixed: Added additional late check for X+Y button combo for debugging.
 - 11-06-2006 changed: Added black border around freemem and remote code info for better readability.
 - 11-06-2006 fixed: Start button mapped in virtual keyboard to Done now as well.