@@ -11,7 +11,6 @@
 #include "Application.h"
 #include "NFOFile.h"
 #include "PlayListPlayer.h"
-#include "GUIThumbnailPanel.h"
 #include "GUIListControl.h"
 #include "GUIPassword.h"
 #include "GUIDialogContextMenu.h"
@@ -111,13 +110,7 @@ bool CGUIWindowVideoFiles::OnMessage(CGUIMessage& message)
         SetHistoryForPath(m_vecItems.m_strPath);
       }
 
-      if (!CGUIWindowVideoBase::OnMessage(message))
-        return false;
-
-      CGUIThumbnailPanel* pControl=(CGUIThumbnailPanel*)GetControl(CONTROL_THUMBS);
-      if (pControl && g_guiSettings.GetBool("videofiles.hidedirectorynames"))
-        pControl->SetLabelState(CGUIThumbnailPanel::HIDE_FOLDERS);
-      return true;
+      return CGUIWindowVideoBase::OnMessage(message);
     }
     break;
 
